# grantbot

./: Dockerfile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: linting.yaml  mkdocsBuild.yaml  mypy.yaml
app/: main.py
app/api/v1/: __init__.py
app/core/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py
app/utils/: config.py  formatting.py  logging.py
scripts/: init_vectordb.py
