[project]
name = "grantbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.3",
]


[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
extend-select = ["E501"]
select = ["E", "W", "F", "C", "A", "U", "N", "TID"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 7


[tool.mypy]
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
# type: ignore[<error-code>] over # type: ignore
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "<library name>.*"
ignore_missing_imports = true